--- a/nasa_mct/index.html
+++ b/nasa_mct/index.html
@@ -30,10 +30,11 @@
     <script>
         var THIRTY_MINUTES = 30 * 60 * 1000;
 
-        require(['openmct'], function (openmct) {
+        require(['openmct', './tutorials/telemetry/bundle'], function (openmct) {
             [
                 'example/eventGenerator',
-                'example/styleguide'
+                'example/styleguide',
+                'tutorials/telemetry'
             ].forEach(
                 openmct.legacyRegistry.enable.bind(openmct.legacyRegistry)
             );
